Custom drag image mispositioned when page is zoomed
Categories
(Core :: DOM: Events, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox100 | --- | wontfix |
firefox101 | --- | verified |
firefox102 | --- | verified |
People
(Reporter: ke5trel, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
37.33 KB,
image/png
|
Details | |
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
STR:
- Visit https://react-dnd.github.io/react-dnd/examples/tutorial.
- Zoom page to 133%.
- Drag the chess piece.
Cursor image is located some distance above and to the left of the cursor instead of directly over it.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=8978bed93cff158ff68e6ceca7e4530e2f520951&tochange=85fb6ffa2887b21084c20349e999b1ec46db1993
Regressed by Bug 1753836.
Comment 1•3 years ago
|
||
:emilio, since you are the author of the regressor, bug 1753836, could you take a look?
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 2•3 years ago
|
||
That's not a cursor, but sure, can look, thanks for filing!
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 3•3 years ago
|
||
The existing code was relying on the drag event coordinates being
already unscaled by the zoom, which bug 1753836 fixed.
This simplifies the relevant code and fixes the bug.
Comment 5•3 years ago
|
||
bugherder |
Comment 6•3 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 7•3 years ago
•
|
||
Comment on attachment 9275185 [details]
Bug 1767944 - Fix drag image coordinates after bug 1753836. r=tnikkel,mstange
Beta/Release Uplift Approval Request
- User impact if declined: Mispositioned drag images with zoomed pages.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple zoom-specific coordinate space fix.
- String changes made/needed: none
- Is Android affected?: No
Assignee | ||
Updated•3 years ago
|
Comment 8•3 years ago
|
||
Comment on attachment 9275185 [details]
Bug 1767944 - Fix drag image coordinates after bug 1753836. r=tnikkel,mstange
Approved for 101.0b5.
Comment 9•3 years ago
|
||
bugherder uplift |
Updated•3 years ago
|
Reproduced the issue in release 100 using Windows 10.
Verified - Fixed in latest Nightly 102.0a1 (2022-05-10) and Beta 101.0b5 (build id: 20220509162644) using Windows 10, macOS 12 and Ubuntu 20.
Description
•