widget/nsBaseDragService.cpp
@@ -394,8 +394,7 @@ nsBaseDragService::InvokeDragSessionWithImage(
   mSourceWindowContext =
       aDOMNode ? aDOMNode->OwnerDoc()->GetWindowContext() : nullptr;
 
-  mScreenPosition.x = aDragEvent->ScreenX(CallerType::System);
-  mScreenPosition.y = aDragEvent->ScreenY(CallerType::System);
+  mScreenPosition = aDragEvent->ScreenPoint(CallerType::System);
   mInputSource = aDragEvent->MozInputSource();
 
   // If dragging within a XUL tree and no custom drag image was
@@ -443,8 +442,7 @@ nsBaseDragService::InvokeDragSessionWithRemoteImage(
   mImageOffset = CSSIntPoint(0, 0);
   mSourceWindowContext = mDragStartData->GetSourceWindowContext();
 
-  mScreenPosition.x = aDragEvent->ScreenX(CallerType::System);
-  mScreenPosition.y = aDragEvent->ScreenY(CallerType::System);
+  mScreenPosition = aDragEvent->ScreenPoint(CallerType::System);
   mInputSource = aDragEvent->MozInputSource();
 
   nsresult rv = InvokeDragSession(
@@ -692,7 +690,7 @@ nsBaseDragService::DragMoved(int32_t aX, int32_t aY) {
           RoundedToInt(LayoutDeviceIntPoint(aX, aY) /
                        frame->PresContext()->CSSToDevPixelScale()) -
           mImageOffset;
-      (static_cast<nsMenuPopupFrame*>(frame))->MoveTo(cssPos, true);
+      static_cast<nsMenuPopupFrame*>(frame)->MoveTo(cssPos, true);
     }
   }
 
@@ -753,11 +751,9 @@ nsresult nsBaseDragService::DrawDrag(nsINode* aDOMNode,
   }
 
   // convert mouse position to dev pixels of the prescontext
-  CSSIntPoint screenPosition(aScreenPosition);
-  screenPosition.x -= mImageOffset.x;
-  screenPosition.y -= mImageOffset.y;
-  LayoutDeviceIntPoint screenPoint =
-      ConvertToUnscaledDevPixels(*aPresContext, screenPosition);
+  const CSSIntPoint screenPosition = aScreenPosition - mImageOffset;
+  const auto screenPoint = LayoutDeviceIntPoint::Round(
+      screenPosition * (*aPresContext)->CSSToDevPixelScale());
   aScreenDragRect->MoveTo(screenPoint.x, screenPoint.y);
 
   // check if drag images are disabled
@@ -929,15 +925,6 @@ nsresult nsBaseDragService::DrawDragForImage(
   }
 
   return result;
-}
-
-LayoutDeviceIntPoint nsBaseDragService::ConvertToUnscaledDevPixels(
-    nsPresContext* aPresContext, CSSIntPoint aScreenPosition) {
-  int32_t adj =
-      aPresContext->DeviceContext()->AppUnitsPerDevPixelAtUnitFullZoom();
-  return LayoutDeviceIntPoint(
-      nsPresContext::CSSPixelsToAppUnits(aScreenPosition.x) / adj,
-      nsPresContext::CSSPixelsToAppUnits(aScreenPosition.y) / adj);
 }
 
 NS_IMETHODIMP
